--- a/PlaywrightSession/src/test/resourcess/config/config.properties
+++ b/PlaywrightSession/src/test/resourcess/config/config.properties
@@ -1,6 +1,6 @@
-browser= safari
-url= https://naveenautomationlabs.com/opencart/
+browser= Chrome
+url= https://naveenautomationlabs.com/opencart/index.php?route=account/login
 
-username = 
-password =
+username =sureshramavath40@gmail.com
+password =Admin14789
 headless = true
